alignment issue fixed

--- a/src/container/About/about.css
+++ b/src/container/About/about.css
@@ -20,7 +20,7 @@
     color: #fff;
     font-weight: 600;
     margin-bottom: 1rem;
-    text-align: justify;
+    /* text-align: justify; */
     line-height: 26px;
     font-size: 18px;
 }
